force-app/main/default/objects/Partner_Revenue__c/Partner_Revenue__c.object-meta.xml
<CustomObject>
    <label>Partner Revenue</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Partner Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Revenues</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>