force-app/main/default/objects/Partner_Revenue__c/fields/Direct_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Direct_Revenue__c</fullName>
    <label>Direct Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>