force-app/main/default/objects/Partner_Revenue__c/fields/First_Half__c.field-meta.xml
<CustomField>
    <fullName>First_Half__c</fullName>
    <description>The solution revenue of first six months from CPP data fields.</description>
    <label>1st Half Solution Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>