force-app/main/default/objects/Partner_Revenue__c/fields/Hosted__c.field-meta.xml
<CustomField>
    <fullName>Hosted__c</fullName>
    <label>Hosted</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>