force-app/main/default/objects/Partner_Revenue__c/fields/Indirect_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Revenue__c</fullName>
    <label>Indirect Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>