force-app/main/default/objects/Partner_Revenue__c/fields/Min_total_revenue_for_next_tier__c.field-meta.xml
<CustomField>
    <fullName>Min_total_revenue_for_next_tier__c</fullName>
    <description>Next Tier Level Revenue - Total Solution Revenue</description>
    <formula>IF(Revenue_to_Target__c &gt;  Total_Solution_Revenue__c , Revenue_to_Target__c - Total_Solution_Revenue__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue for Next tier level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>