force-app/main/default/objects/Partner_Revenue__c/fields/Min_Total_Revenue_to_Platinum__c.field-meta.xml
<CustomField>
    <fullName>Min_Total_Revenue_to_Platinum__c</fullName>
    <description>This field contains how much revenue need to achieve Platinum tier.</description>
    <formula>IF( Partner_Account__r.Channel_Program_Revenue_to_Platinum__c &gt;  Total_Solution_Revenue__c , Partner_Account__r.Channel_Program_Revenue_to_Platinum__c -  Total_Solution_Revenue__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Total Revenue to Platinum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>