force-app/main/default/objects/Partner_Revenue__c/fields/Net_New_Customer_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_New_Customer_Revenue__c</fullName>
    <formula>Solution_from_Net_New_Customers__c  +  Subscription_from_Net_New_Customers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net New Customer Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>