force-app/main/default/objects/Partner_Revenue__c/fields/Order_YTD__c.field-meta.xml
<CustomField>
    <fullName>Order_YTD__c</fullName>
    <label>Order YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>