force-app/main/default/objects/Partner_Revenue__c/fields/Percent_of_Total_Rev_Net_New_Cust__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Total_Rev_Net_New_Cust__c</fullName>
    <formula>IF(AND(Net_New_Customer_Revenue__c &lt; 0, Total_Revenue__c &lt; 0),
-(Net_New_Customer_Revenue__c / Total_Revenue__c),
Net_New_Customer_Revenue__c / Total_Revenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Total Rev Net New Cust</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>