force-app/main/default/objects/Partner_Revenue__c/fields/Professional_Services__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services__c</fullName>
    <label>Professional Services</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>