force-app/main/default/objects/Partner_Revenue__c/fields/Recurring_SW__c.field-meta.xml
<CustomField>
    <fullName>Recurring_SW__c</fullName>
    <label>Recurring SW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>