force-app/main/default/objects/Partner_Revenue__c/fields/Revenue_to_Target__c.field-meta.xml
<CustomField>
    <fullName>Revenue_to_Target__c</fullName>
    <formula>Partner_Account__r.Channel_Program_Next_Level_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Tier Level Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>