force-app/main/default/objects/Partner_Revenue__c/fields/Second_Half__c.field-meta.xml
<CustomField>
    <fullName>Second_Half__c</fullName>
    <description>The total solution revenue of last six months from CPP data fields.</description>
    <label>2nd Half Solution Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>