force-app/main/default/objects/Partner_Revenue__c/fields/Software__c.field-meta.xml
<CustomField>
    <fullName>Software__c</fullName>
    <label>Software</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>