force-app/main/default/objects/Partner_Revenue__c/fields/Solution_from_Net_New_Customers__c.field-meta.xml
<CustomField>
    <fullName>Solution_from_Net_New_Customers__c</fullName>
    <label>Solution from Net New Customers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>