force-app/main/default/objects/Partner_Revenue__c/fields/Subscription_from_Net_New_Customers__c.field-meta.xml
<CustomField>
    <fullName>Subscription_from_Net_New_Customers__c</fullName>
    <label>Subscription from Net New Customers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>