force-app/main/default/objects/Partner_Revenue__c/fields/Subscription_Sites__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Sites__c</fullName>
    <label>Subscription Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>