force-app/main/default/objects/Partner_Revenue__c/fields/Total_Services_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Services_Revenue__c</fullName>
    <label>Total Services Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>