force-app/main/default/objects/Partner_Revenue__c/fields/Total_Solution_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Solution_Revenue__c</fullName>
    <formula>Hardware__c  +  Software__c  + Recurring_SW__c+ Professional_Services__c  + Recurring_PS__c+ TS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Solution Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>