force-app/main/default/objects/Partner_Revenue__c/fields/Total_Subscription_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Subscription_Revenue__c</fullName>
    <formula>Hosted__c  +  SaaS__c  +  POSaaS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cloud Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>