force-app/main/default/objects/Partner_Revenue__c/fields/Traditional_Sites__c.field-meta.xml
<CustomField>
    <fullName>Traditional_Sites__c</fullName>
    <label>Traditional Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>